--- a/assets/css/drink.css
+++ b/assets/css/drink.css
@@ -2,4 +2,12 @@
 
 * {
     box-sizing: border-box;
+    box-sizing: border-box;
+    color: #7e1919cf;
+    font-weight: 700;
+    font-size: 1.8rem;
+    margin: 15px auto;
+    text-transform: uppercase;
+    letter-spacing: 6px;
+    font-family: fantasy;
 }
