--- a/assets/css/drink.css
+++ b/assets/css/drink.css
@@ -10,4 +10,13 @@
     text-transform: uppercase;
     letter-spacing: 6px;
     font-family: fantasy;
+    margin: 5px;
+}
+div {
+    background-image: url(https://images.unsplash.com/photo-1506368249639-73a05d6f6488?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80);
+    object-fit: cover;
+    display: block;
+    vertical-align: middle;
+    background-size: cover;
+    background-position: 50% 50%;
 }
