--- a/assets/css/ingredient.css
+++ b/assets/css/ingredient.css
@@ -1,9 +1,32 @@
+ /* Not finished yet, more changes will be made*/
+
 * {
     box-sizing: border-box;
     letter-spacing: 1px;
     text-transform: uppercase;
     font-weight: 200;
     margin: 15px auto 0;
+}
+
+div {
+    box-sizing: border-box;
+    letter-spacing: 0px;
+    text-transform: uppercase;
+    font-weight: 200;
+    margin: 15px auto 0;
+    font-family: sans-serif;
+}
+
+h2 {
+    box-sizing: border-box;
+    color: #7e1919cf;
+    margin: 1px auto;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-family: fantasy;
+    text-align: center;
+    
 }
 
 input {
@@ -14,7 +37,6 @@ input {
     letter-spacing: normal;
     word-spacing: normal;
     line-height: normal;
-    text-transform: none;
     text-indent: 0px;
     text-shadow: none;
     text-align: start;
@@ -29,14 +51,15 @@ input {
     border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
     /* border-image: initial; */
     /* padding: 13px; */
-    border-radius: 50px;
+    border-radius: 8px;
     font-family: Arial;
     font-weight: 900;
+    font-size: x-large;
     text-transform: uppercase;
 }
 
 button {
-    appearance: auto;
+appearance: auto;
     writing-mode: horizontal-tb !important;
     text-rendering: auto;
     color: buttontext;
@@ -52,12 +75,14 @@ button {
     cursor: default;
     box-sizing: border-box;
     background-color: buttonface;
-    margin: 4em;
+    margin: 1em;
     padding: 9px 17px;
-    border-width: 1px;
+    border-radius: 8px;
+    border-width: 0px;
     border-style: outset;
     border-color: buttonborder;
     border-image: initial;
+    background-color: #c9763bad;
 }
 
 Placeholder {
