--- a/assets/css/drink.css
+++ b/assets/css/drink.css
@@ -8,25 +8,31 @@ h1 {
     font-family: fantasy;
     text-align: center;
     
-h2 {
-    box-sizing: border-box;
-    color: #580707cf;
-    font-weight: 700;
-    font-size: 1.8rem;
-    margin: 14px auto;
-    /* text-transform: uppercase; */
-    letter-spacing: 5px;
-    font-family: fantasy;
-    background: white;
 }
 
-h3 {
+button {
+    appearance: auto;
+    writing-mode: horizontal-tb !important;
+    text-rendering: auto;
+    color: buttontext;
+    letter-spacing: normal;
+    word-spacing: normal;
+    line-height: normal;
+    /* text-transform: none; */
+    /* text-indent: 0px; */
+    text-shadow: none;
+    display: inline-block;
+    text-align: center;
+    align-items: flex-start;
+    cursor: default;
     box-sizing: border-box;
-    color: #7e1919cf;
-    font-weight: 700;
-    font-size: 1.8rem;
-    margin: 13px auto;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-family: fantasy;
+    background-color: buttonface;
+    margin: 1em;
+    padding: 9px 17px;
+    border-width: 1px;
+    border-style: outset;
+    border-color: #c9763bad;
+    border-image: initial;
+    border-radius: 8px;
+    background-color: #c9763bad;
 }
