--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -4,6 +4,12 @@ body {
     background: ##ffffff;
 }
 
+iframe {
+    border-width: 0px;
+    width: 100%;
+    height: 550px;
+}
+
 div {
     background-image: linear-gradient(0deg, rgb(255 255 255 / 54%), rgb(255 255 255 / 28%)),url(https://images.unsplash.com/photo-1506368249639-73a05d6f6488?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80);
     object-fit: cover;
