--- a/assets/css/drink.css
+++ b/assets/css/drink.css
@@ -1,4 +1,17 @@
-h1 {
+
+* {
+    box-sizing: border-box;
+    letter-spacing: 1px;
+    color: #7e1919cf;
+    font-weight: 200;
+    margin: 15px auto 0;
+    text-transform: uppercase;
+    letter-spacing: 6px;
+    font-family: fantasy;
+    text-align: center;
+}
+
+h2 {
     box-sizing: border-box;
     color: #7e1919cf;
     margin: 15px auto;
@@ -17,9 +30,6 @@ button {
     color: buttontext;
     letter-spacing: normal;
     word-spacing: normal;
-    line-height: normal;
-    /* text-transform: none; */
-    /* text-indent: 0px; */
     text-shadow: none;
     display: inline-block;
     text-align: center;
@@ -29,10 +39,13 @@ button {
     background-color: buttonface;
     margin: 1em;
     padding: 9px 17px;
-    border-width: 1px;
-    border-style: outset;
-    border-color: #c9763bad;
-    border-image: initial;
     border-radius: 8px;
+    border-width: 0px;
+    border-style: outset;
+    border-color: buttonborder;
+    border-image: initial;
     background-color: #c9763bad;
+}
+button:hover {
+  box-shadow: 0 9px 17px 0 rgba(0,0,0,0.2), 0 7px 20px 0 rgba(0,0,0,0.20);
 }
