--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -4,6 +4,34 @@ body {
     background: ##ffffff;
 }
 
+h1 {
+    box-sizing: border-box;
+    margin: 15px auto;
+    letter-spacing: 6px;
+    font-family: fantasy;
+    text-align: center;
+    
+}
+
+.animate
+{
+    text-transform: uppercase;
+    background-image: linear-gradient( -225deg, #420707 0%, #420707 29%, #c9763b 67%, #7e1919 100% );
+    background-size: 200% auto;
+    color: #fff;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: textclip 2s linear infinite;
+    display: inline-block;
+    font-size: 70px;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+
 iframe {
     border-width: 0px;
     width: 100%;
@@ -18,6 +46,9 @@ div {
     background-size: cover;
     background-position: 50% 50%;
 }
+
+.col-md-12.text-center {
+    background: white;}
 
 cocktailcard {
     background:#ffffff
