--- a/assets/css/ingredient.css
+++ b/assets/css/ingredient.css
@@ -1,5 +1,3 @@
- /* Not finished yet, more changes will be made*/
-
 * {
     box-sizing: border-box;
     color: #7e1919cf;
@@ -54,7 +52,7 @@ input {
     padding: 20px 100px;
     border-radius: 9px;
     border-width: 0px;
-    background-color: #c9763b5c;
+    background-color: #ffffffb8;
 }
 
 button {
@@ -69,6 +67,8 @@ button {
 }
 button:hover {
   box-shadow: 0 9px 17px 0 rgba(0,0,0,0.2), 0 7px 20px 0 rgba(0,0,0,0.20);
+  padding: 15px 60px;
+  background-color: #8f3b0029;
 }
 Placeholder {
     font-weight: 200;
